Started working on the re-design of the modal window

--- a/src/main/resources/modal.css
+++ b/src/main/resources/modal.css
@@ -9,6 +9,12 @@
     -fx-background-color: lightgray;
 }
 
+.modal #title {
+    -fx-font-size: x-large;
+    -fx-text-fill: black;
+}
+
 .modal .label {
-    -fx-font-size: large;
+    -fx-font-size: medium;
+    -fx-text-fill: gray;
 }
