--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -55,3 +55,25 @@
     -fx-text-fill: gray;
 }
 
+.list-cell{
+    -fx-padding: 5px;
+}
+
+.ruleCell{
+    -fx-border-color: lightgray;
+    -fx-border-width: 2;
+}
+
+.ruleCell .label{
+    -fx-font-size: medium;
+    -fx-text-fill: black;
+}
+
+.ruleCell .title {
+    -fx-font-size: large;
+}
+
+.ruleCell .top {
+    -fx-background-color: lightgray;
+}
+
