--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -1,22 +1,26 @@
 .root{
-    -fx-font-family: "Ubuntu";
+    -fx-font-family: "Ubuntu Light";
 }
 
 .button {
-    -fx-background-color: white;
+    -fx-background-color: #089de3;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 5, 4, 3;
     -fx-padding: 0.333333em 0.666667em 0.416667em 0.666667em; /* 4 8 5 8 */
-    -fx-text-fill: black;
+    -fx-text-fill: white;
     -fx-border-radius: 4px;
-    -fx-border-color: gray;
+}
+
+.button .text {
+    /*-fx-font-family: "Ubuntu Light";*/
+    -fx-font-weight: bold;
 }
 
 .button:hover {
-    -fx-background-color: lightgray;
+    -fx-background-color: #3998d0;
 }
 
 .button:pressed {
-    -fx-background-color: #089de3;
+    -fx-background-color: #5bbeff;
     -fx-text-fill: white;
 }
