Disables the skip and flatten buttons when there's no directory selected

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -43,6 +43,10 @@
     -fx-border-color: transparent;
 }
 
+.tree-cell {
+    -fx-indent: 18;
+}
+
 .tree-cell:filled:hover {
     -fx-background-color: powderblue;
 }
