Improved coherency of the states in the file explorer tree by moving the computations to PathCollection.

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -2,6 +2,14 @@
     -fx-font-family: "Ubuntu Light";
 }
 
+.border-pane {
+    -fx-background-color: white;
+}
+
+.split-pane {
+    -fx-background-color: white;
+}
+
 .button {
     -fx-background-color: #089de3;
     -fx-background-insets: 0, 1, 2;
