--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -2,6 +2,10 @@
     -fx-font-size: x-large;
 }
 
+/*.footer {*/
+/*-fx-background-color: white;*/
+/*}*/
+
 /* Inspection */
 .inspectionPart {
     -fx-border-width: 1;
