--- a/src/main/resources/css/modal.css
+++ b/src/main/resources/css/modal.css
@@ -65,6 +65,40 @@
     -fx-background-color: lightgray;
 }
 
+.list-view *.scroll-bar:horizontal *.increment-button,
+.list-view *.scroll-bar:horizontal *.decrement-button {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
+.list-view *.scroll-bar:horizontal *.increment-arrow,
+.list-view *.scroll-bar:horizontal *.decrement-arrow {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: null;
+}
+
+.list-view *.scroll-bar:vertical *.increment-button,
+.list-view *.scroll-bar:vertical *.decrement-button {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
+.list-view *.scroll-bar:vertical *.increment-arrow,
+.list-view *.scroll-bar:vertical *.decrement-arrow {
+    -fx-background-color: null;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: null;
+}
+
 /* Combo-box */
 .list-cell:focused .combo-box{
     -fx-background-color: lightgray;
