Allows setting the description level of a scheme node

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -54,3 +54,29 @@
     -fx-background-color: #089de3;
     -fx-text-fill: white;
 }
+
+/* Combo-Box */
+.combo-box-base .list-view .list-cell {
+    -fx-background-color: white;
+    -fx-text-fill: black;
+}
+
+.combo-box .list-view .list-cell:selected {
+    -fx-background-color: darkgray;
+    -fx-text-fill: black;
+}
+
+.combo-box {
+    -fx-background-color: white;
+    -fx-border-color: gray;
+    -fx-border-width: 1px;
+}
+
+.combo-box-base .list-cell {
+    -fx-background-color: white;
+    -fx-text-fill: black;
+}
+
+.combo-box .list-view .list-cell:hover {
+    -fx-background-color: lightgray;
+}
