Made the time estimate messages less specific to deal with imprecision

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -10,6 +10,10 @@
     -fx-background-color: white;
 }
 
+.boldText {
+    -fx-font-weight: bold;
+}
+
 /* Buttons */
 .button {
     -fx-background-color: #089de3;
