Scheme nodes are now semi-transparent

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -97,8 +97,8 @@
 }
 
 /* Schema */
-.schemaNode {
-    -fx-text-fill: grey;
+.schemaNode .cellText {
+    -fx-opacity: 70%;
 }
 
 .schemaNode:focused:selected{
