Fixes to messages. Loads metadata values from xpath to use in the metadata form.

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -40,6 +40,11 @@
     -fx-faint-focus-color: transparent;
 }
 
+.toggle-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
 /* Tree-view and Tree-cell*/
 .tree-view {
     -fx-background-color: white;
