--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -40,6 +40,11 @@
     -fx-faint-focus-color: transparent;
 }
 
+.inspectionPart .formLabel {
+    -fx-text-fill: black;
+    -fx-font-size: medium;
+}
+
 .toggle-button {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
@@ -102,25 +107,6 @@
 }
 
 /* Schema */
-
-.dropBox{
-    -fx-border-color: grey ;
-    -fx-border-width: 2 ;
-    -fx-border-style: segments(10, 15, 15, 15)  line-cap square ;
-}
-
-.dropBox:hover {
-    -fx-border-color: dimgray;
-    -fx-border-width: 2 ;
-    -fx-border-style: segments(10, 15, 15, 15)  line-cap square ;
-}
-
-.dropBoxHovered{
-    -fx-border-color: #089de3;
-    -fx-border-width: 2 ;
-    -fx-border-style: segments(10, 15, 15, 15)  line-cap square ;
-}
-
 .schemaNode .cellText {
     -fx-opacity: 70%;
 }
