Improvements to the metadata form

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -50,6 +50,10 @@
     -fx-border-color: transparent;
 }
 
+.code-area {
+    -fx-font-size: 90%;
+}
+
 /* Tree-view and Tree-cell*/
 .tree-view {
     -fx-background-color: white;
