Improved the way the metadavaValues are created. Added a datePicker and description level selector to the metadata form. Added a button to save the metadata.

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -54,6 +54,14 @@
     -fx-font-size: 90%;
 }
 
+.inspectionPart .date-picker .label {
+    -fx-text-fill: black;
+    -fx-font-size: medium;
+}
+.inspectionPart .date-picker .button {
+    -fx-background-color: transparent;
+}
+
 /* Tree-view and Tree-cell*/
 .tree-view {
     -fx-background-color: white;
