--- a/src/main/resources/templates/ead.xml
+++ b/src/main/resources/templates/ead.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ead:ead xmlns:ead="urn:isbn:1-931666-22-9" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="urn:isbn:1-931666-22-9 ead.xsd http://www.w3.org/1999/xlink ../schemas/xlink.xsd">
+         xsi:schemaLocation="urn:isbn:1-931666-22-9 ../templates/ead.xsd http://www.w3.org/1999/xlink ../schemas/xlink.xsd">
     <ead:eadheader>
         <ead:eadid> </ead:eadid>
         <ead:filedesc>
