Added support for a few new template replaceable values. Updated templates.

--- a/src/main/resources/templates/dc.xml
+++ b/src/main/resources/templates/dc.xml
@@ -5,10 +5,12 @@
     <type>{{level}}</type>
     <title>{{title}}</title>
     <identifier>{{id}}</identifier>
-    <creator>{{author}}</creator>
-    <date>{{date}}</date>
+    <creator>{{creator}}</creator>
+    <date>{{dateInitial}}</date>
+    <date>{{dateFinal}}</date>
     <description>{{description}}</description>
     <publisher>{{producer}}</publisher>
     <rights>{{rights}}</rights>
+    <language>{{language}}</language>
 
 </simpledc>
