--- a/src/main/resources/templates/ead2002.xml
+++ b/src/main/resources/templates/ead2002.xml
@@ -2,7 +2,7 @@
 <ead
         xmlns="urn:isbn:1-931666-22-9"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="urn:isbn:1-931666-22-9 ../templates/ead.xsd">
+        xsi:schemaLocation="urn:isbn:1-931666-22-9 ead2002.xsd">
     <eadheader>
         <eadid>
         </eadid>
@@ -24,9 +24,10 @@
         <did>
             <unittitle>{{title}}</unittitle>
             <unitid>{{id}}</unitid>
-            <unitdate normal="{{date}}">{{date}}</unitdate>
+            <unitdate normal="{{dateInitial}}/{{dateFinal}}">{{dateInitial}}/{{dateFinal}}</unitdate>
             <origination label="producer">{{producer}}</origination>
             <origination label="creator">{{creator}}</origination>
+            <langmaterial>{{language}}</langmaterial>
         </did>
         <scopecontent>
             <p>{{description}}</p>
