--- a/src/main/resources/templates/ead2002.xml
+++ b/src/main/resources/templates/ead2002.xml
@@ -2,7 +2,7 @@
 <ead
         xmlns="urn:isbn:1-931666-22-9"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="urn:isbn:1-931666-22-9 ead2002.xsd">
+        xsi:schemaLocation="urn:isbn:1-931666-22-9 ../schemas/ead2002.xsd">
     <eadheader>
         <eadid>
         </eadid>
