--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -1,4 +1,4 @@
-.root{
+.root {
     -fx-font-family: "Ubuntu Light";
 }
 
@@ -12,6 +12,21 @@
 
 .boldText {
     -fx-font-weight: bold;
+}
+
+.dialog-pane {
+    -fx-border-color: #089de3;
+    -fx-border-width: 2px;
+    -fx-background-color: white;
+    -fx-text-fill: black;
+}
+
+.dialog-pane:header *.header-panel {
+    -fx-background-color: #089de3;
+}
+
+.dialog-pane:header *.header-panel *.label {
+    -fx-text-fill: white;
 }
 
 /* Buttons */
