Fixed critical issue reported by SonarQube. Fixed style and resize of error window.

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -14,18 +14,18 @@
     -fx-font-weight: bold;
 }
 
-.dialog-pane {
+.alert {
     -fx-border-color: #089de3;
     -fx-border-width: 2px;
     -fx-background-color: white;
     -fx-text-fill: black;
 }
 
-.dialog-pane:header *.header-panel {
+.alert:header *.header-panel {
     -fx-background-color: #089de3;
 }
 
-.dialog-pane:header *.header-panel *.label {
+.alert:header *.header-panel *.label {
     -fx-text-fill: white;
 }
 
