Don't allow more than one metadata file with the same name in each description object.

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -103,6 +103,8 @@
     -fx-background-color: white;
     -fx-border-color: gray;
     -fx-border-width: 1px;
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
 }
 
 .combo-box-base .list-cell {
